fixed partners dropdown menu gap

--- a/app/globals.css
+++ b/app/globals.css
@@ -95,3 +95,10 @@ body {
     flex-direction: column-reverse;
   }
 }
+
+.hamburger_menu {
+  display: flex;
+  @media screen and (min-width: 1023px) {
+    display: none;
+  }
+}
